--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Practical Spirituality - Learning to Handle Life</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">37 minutes ago</div>
+                        <div class="date">47 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -257,7 +257,7 @@
                     <div class="video-info">
                         <h3>DeMarker Indicator Strategy</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -5155,7 +5155,7 @@
                         <div class="video-info">
                             <h3>DeMarker Indicator Strategy</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -7246,7 +7246,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Practical Spirituality - Learning to Handle Life</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">37 minutes ago</div>
+                            <div class="date">47 minutes ago</div>
                         </div>
                     </a>
                 </div>
