--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Human Beings Have Only One Problem | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>How social media fuels useless products</h3>
                         <div class="channel">Matt D'Avella</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -202,7 +202,7 @@
                     <div class="video-info">
                         <h3>You won't stop Reform by calling their supporters racist</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -235,7 +235,7 @@
                     <div class="video-info">
                         <h3>Candlestick Pattern Is Not Enough, Here's Why...</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -246,7 +246,7 @@
                     <div class="video-info">
                         <h3>Backtesting: Why Short Tests Harm Real-Time Performance #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -345,7 +345,7 @@
                     <div class="video-info">
                         <h3>4 Reasons Your Backtest Might Be Worthless</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5122,7 +5122,7 @@
                         <div class="video-info">
                             <h3>You won't stop Reform by calling their supporters racist</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5133,7 +5133,7 @@
                         <div class="video-info">
                             <h3>Candlestick Pattern Is Not Enough, Here's Why...</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5144,7 +5144,7 @@
                         <div class="video-info">
                             <h3>Backtesting: Why Short Tests Harm Real-Time Performance #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5199,7 +5199,7 @@
                         <div class="video-info">
                             <h3>4 Reasons Your Backtest Might Be Worthless</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7257,7 +7257,7 @@
                         <div class="video-info">
                             <h3>Human Beings Have Only One Problem | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8242,7 +8242,7 @@
                         <div class="video-info">
                             <h3>How social media fuels useless products</h3>
                             <div class="channel">Matt D'Avella</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
