--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Forex Carry Trade Strategy</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">22 minutes ago</div>
+                        <div class="date">38 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Human Beings Have Only One Problem | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -213,7 +213,7 @@
                     <div class="video-info">
                         <h3>You won't stop Reform by calling their supporters racist</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -807,7 +807,7 @@
                     <div class="video-info">
                         <h3>How AI Models Trade Stocks</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1434,7 +1434,7 @@
                     <div class="video-info">
                         <h3>Are you a nihilist?</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5087,7 +5087,7 @@
                         <div class="video-info">
                             <h3>Forex Carry Trade Strategy</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">22 minutes ago</div>
+                            <div class="date">38 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5133,7 +5133,7 @@
                         <div class="video-info">
                             <h3>You won't stop Reform by calling their supporters racist</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5353,7 +5353,7 @@
                         <div class="video-info">
                             <h3>How AI Models Trade Stocks</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7257,7 +7257,7 @@
                         <div class="video-info">
                             <h3>Human Beings Have Only One Problem | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7708,7 +7708,7 @@
                         <div class="video-info">
                             <h3>Are you a nihilist?</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
