--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Forex Carry Trade Strategy</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">38 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Practical Spirituality - Learning to Handle Life</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>How Many Winning Trades Do You Need?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AMONG US: FORTNITE EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -191,7 +191,7 @@
                         <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -202,7 +202,7 @@
                     <div class="video-info">
                         <h3>How to Start with the5ers (Full Setup Guide)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -224,7 +224,7 @@
                     <div class="video-info">
                         <h3>Uncovering the Wakefulness Within You | Eckhart Tolle on The Paradox of Time (Part 3)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -235,7 +235,7 @@
                     <div class="video-info">
                         <h3>Unreleased Talk from 2004 – The Pain of Ignorance | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -884,7 +884,7 @@
                     <div class="video-info">
                         <h3>How often do gaps start multi-day trends?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5087,7 +5087,7 @@
                         <div class="video-info">
                             <h3>Forex Carry Trade Strategy</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">38 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5098,7 +5098,7 @@
                         <div class="video-info">
                             <h3>How Many Winning Trades Do You Need?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5111,7 +5111,7 @@
                             <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5122,7 +5122,7 @@
                         <div class="video-info">
                             <h3>How to Start with the5ers (Full Setup Guide)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5386,7 +5386,7 @@
                         <div class="video-info">
                             <h3>How often do gaps start multi-day trends?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7246,7 +7246,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Practical Spirituality - Learning to Handle Life</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7268,7 +7268,7 @@
                         <div class="video-info">
                             <h3>Uncovering the Wakefulness Within You | Eckhart Tolle on The Paradox of Time (Part 3)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7279,7 +7279,7 @@
                         <div class="video-info">
                             <h3>Unreleased Talk from 2004 – The Pain of Ignorance | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9580,7 +9580,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AMONG US: FORTNITE EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
