--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Human Beings Have Only One Problem | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AMONG US: FORTNITE EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -796,7 +796,7 @@
                     <div class="video-info">
                         <h3>Master Algo Trading: Automated Strategies & Backtesting Explained #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -873,7 +873,7 @@
                     <div class="video-info">
                         <h3>AI Bot Backtest: Real Money Performance vs. Estimates #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -1375,9 +1375,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=J-mmY3LLadA" target="_blank">
-                    <img src="https://i.ytimg.com/vi/J-mmY3LLadA/mqdefault.jpg" alt="THE END OF SIDEMEN AMONG US">
+                    <img src="https://i.ytimg.com/vi/J-mmY3LLadA/mqdefault.jpg" alt="SIDEMEN AMONG US PROXIMITY CHAT BUT THE IMPOSTOR CAN CONTROL CREWMATES">
                     <div class="video-info">
-                        <h3>THE END OF SIDEMEN AMONG US</h3>
+                        <h3>SIDEMEN AMONG US PROXIMITY CHAT BUT THE IMPOSTOR CAN CONTROL CREWMATES</h3>
                         <div class="channel">MoreSidemen</div>
                         <div class="date">1 week ago</div>
                     </div>
@@ -5342,7 +5342,7 @@
                         <div class="video-info">
                             <h3>Master Algo Trading: Automated Strategies & Backtesting Explained #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5375,7 +5375,7 @@
                         <div class="video-info">
                             <h3>AI Bot Backtest: Real Money Performance vs. Estimates #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7257,7 +7257,7 @@
                         <div class="video-info">
                             <h3>Human Beings Have Only One Problem | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9580,7 +9580,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AMONG US: FORTNITE EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9675,9 +9675,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=J-mmY3LLadA" target="_blank">
-                        <img src="https://i.ytimg.com/vi/J-mmY3LLadA/mqdefault.jpg" alt="THE END OF SIDEMEN AMONG US">
+                        <img src="https://i.ytimg.com/vi/J-mmY3LLadA/mqdefault.jpg" alt="SIDEMEN AMONG US PROXIMITY CHAT BUT THE IMPOSTOR CAN CONTROL CREWMATES">
                         <div class="video-info">
-                            <h3>THE END OF SIDEMEN AMONG US</h3>
+                            <h3>SIDEMEN AMONG US PROXIMITY CHAT BUT THE IMPOSTOR CAN CONTROL CREWMATES</h3>
                             <div class="channel">MoreSidemen</div>
                             <div class="date">1 week ago</div>
                         </div>
